 Bug 457672 -  window blur event is not fired when opening a new tab, r+sr=jst